Fix dropdown onClick and alignements

--- a/backoffice/src/components/backoffice/common/Dropdown.scss
+++ b/backoffice/src/components/backoffice/common/Dropdown.scss
@@ -3,5 +3,6 @@
 
 .Dropdown {
   width: 100%;
+  display: inline;
   @include dropdown();
 }
